fix position of private chat scrollbar

--- a/bigbluebutton-html5/imports/ui/components/chat/message-list/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-list/styles.scss
@@ -22,7 +22,7 @@
   flex-flow: column;
   flex-grow: 1;
   flex-shrink: 1;
-  margin-right: auto;
+  margin-right: 0;
   padding-right: var(--md-padding-x);
   padding-top: 0;
   &:after {
